2004-05-24  Wim Taymans  <wim@fluendo.com>

	* gst/avi/gstavidemux.c: (gst_avi_demux_handle_src_query):
	Fix potential division by zero error and hopefully get
	the position query right to get correct timestamps on avi
	audio.

2004-05-24  Wim Taymans  <wim@fluendo.com>

	* gst/videoscale/videoscale.c: (gst_videoscale_scale_nearest),
	(gst_videoscale_scale_nearest_str2),
	(gst_videoscale_scale_nearest_str4),
	(gst_videoscale_scale_nearest_32bit),
	(gst_videoscale_scale_nearest_24bit),
	(gst_videoscale_scale_nearest_16bit):
	Fix the scaling algorithm and avoid a buffer overflow.
        removed the while loop in the scaling function as it
	was used for point sampling only.

2004-05-24  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* ext/mad/gstid3tag.c: (gst_id3_tag_get_type),
	(gst_id3_tag_class_init), (gst_id3_tag_init),
	(gst_id3_tag_set_property), (gst_id3_tag_get_tag_to_render),
	(gst_id3_tag_handle_event), (gst_id3_tag_do_caps_nego),
	(gst_id3_tag_send_tag_event):
	  lots of fixes to make id3mux work and id3demux work correctly

2004-05-24  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* ext/Makefile.am:
	  add rules to build shout2send (was removed by accident
	  when this module was no more marked experimental/broken)

2004-05-24  Zaheer Abbas Merali <zaheerabbas@merali.org>

	* ext/shout2/gstshout2.c:
	* ext/shout2/gstshout2.h:
	  adding a "connection problem" signal to shout2send
	  (fixes #142954)

2004-05-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/kio/kioreceiver.cpp:
	* ext/kio/kioreceiver.h:
          fix sign comparison issues

2004-05-21  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* gst/cdxaparse/gstcdxaparse.c:
	* gst/cdxaparse/gstcdxaparse.h:
	  some renaming
	  add some checks/sanity
	  prepare for seek addition

	* sys/sunaudio/gstsunaudio.c:
	  remove exported dupe init function

2004-05-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/dv/gstdvdec.c: (gst_dvdec_init), (gst_dvdec_get_formats),